--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.3.1</version>
         <configuration>
-	  <mainClass>com.brotherlogic.beer.CheckCellar</mainClass>
+	  <mainClass>com.brotherlogic.beer.Resolver</mainClass>
 	</configuration>
       </plugin>
     </plugins>
